appId: ${APP_ID ?? "app.exactly"}
---
- assertTrue: ${asset && to && amount && !Number.isNaN(Number(amount))}
- tapOn: Send
- tapOn: Enter Anvil address
- inputText: ${to}
- hideKeyboard
- tapOn: { text: Next, waitToSettleTimeoutMs: 0 }
- runFlow:
    when: { true: "${maestro.platform != 'web'}" }
    commands:
      - tapOn:
          text: ^${asset}, [\s\d,.\xa0]+ available$
          waitToSettleTimeoutMs: 0
- runFlow: # HACK https://github.com/mobile-dev-inc/Maestro/issues/2914
    when: { platform: web }
    commands:
      - tapOn:
          id: ^${asset}, [\s\d,.\xa0]+ available$
          waitToSettleTimeoutMs: 0
- tapOn: ${asset}
- inputText: ${amount}
- runFlow: # HACK
    when: { true: "${maestro.platform != 'web'}" }
    commands: [{ tapOn: "To:" }]
- tapOn: Review
- tapOn: Send
- assertVisible: Transaction details
- runScript: ../dist/getAccount.js
- runScript:
    file: ../dist/hookProposals.js
    env: { account: "${output.account}" }
- runFlow: { file: tapAria.yaml, env: { aria: Close } }
